# waffleweb

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  README.rst  __init__.py  helpfulCommands.txt  requirements.txt  setup.cfg  setup.py  testProj.py
MathAPI/: MathAPI.py  __init__.py
docs/: 0. index.rst  0.index.rst  conf.py  index.rst  index.rst~
docs/1.Getting-Started/: 1.0.Index.rst  1.1.Installation-Guide.rst  1.1.Installation-Guide.rst~  1.2.Basics.rst  1.2.Basics.rst~
docs/3.Reference/: 3.0.Index.rst
docs/Getting-Started/: Basics.rst  Basics.rst~  Index.rst  Index.rst~  Installation-Guide.rst  Installation-Guide.rst~
docs/How-To-Guides/: Cookies.rst  Cookies.rst~  Custom-Error-Pages.rst  Custom-Error-Pages.rst~  Deploying-Your-Project.rst  Deploying-Your-Project.rst~  Forms.rst  Forms.rst~  Index.rst  (+13 more)
testApp/: __init__.py  testApp.py
tests/: appRouteTest.py  appRouteTests.py  appTest.py  commands.txt  cookiesTest.py  errorResponsesTest.py  middlewareTest.py  parserTest.py  projectAppTest.py  projectRunTest.py  projectTest.py  requestHandlerTest.py  requestTest.py  responseTest.py  settings.py  settingsTest.py  staticTest.py  templateTest.py  test.html  testApp.py  testProj.py  test_app.py  test_cookies.py  test_errorResponses.py  test_file.py  test_methodHandler.py  test_middleware.py  test_multiValueOneKeyDict.py  test_parser.py  test_request.py  test_requestHandler.py  test_response.py  test_static.py  test_template.py  test_wsgi.py  testtext.txt  wsgiTest.py
waffleweb/: __init__.py  app.py  cookie.py  datatypes.py  defaults.py  errorResponses.py  exceptions.py  files.py  methodHandler.py  middleware.py  parser.py  project.py  request.py  response.py  server.py  settings.py  static.py  template.py  wsgi.py
(+58 files in other folders)
