[metadata]
description-file = README.md
name = waffleweb
version = attr: waffleweb.__version__
url = https://waffleweb.site
project_urls =
    Source Code = https://github.com/Berserkware/waffleweb
    Discord = https://discord.gg/U6HjwhkcGr
license = MIT
author = Caleb Mckay
author_email = berserkware@gmail.com
description = A WSGI Python web framework for making web applications easily.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = framework, web, wsgi, waffleweb, web-framework
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9

[options]
python_requires = >= 3.9
install_requires =
    pytz
    jinja2