[metadata]
description-file = README.rst
name = waffleweb
version = attr: waffleweb.__version__
url = https://berserkware.github.io/waffleweb
project_urls =
    Documentation = https://waffleweb.readthedocs.io
    Source Code = https://github.com/Berserkware/waffleweb
    Discord = https://discord.gg/U6HjwhkcGr
license = MIT
author = Caleb Mckay
author_email = berserkware@gmail.com
description = A WSGI Python web framework for making web applications easily.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = framework, web, wsgi, waffleweb, web-framework
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >= 3.9
install_requires =
    pytz
    jinja2